--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Trey's Engineering Portfolio
 description: Radar, RF, and signal processing projects
-theme: minima
+theme: jekyll-theme-slate
 markdown: kramdown
