--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,13 @@
 title: Trey's Engineering Portfolio
 description: Radar, RF, and signal processing projects
-theme: jekyll-theme-slate
+theme: "mmistakes/minimal-mistakes"
+minimal_mistakes_skin: "default" # or "dark", "air", "neon", etc.
+
+plugins:
+  - jekyll-include-cache
+
+# Optional: social media, Google Analytics, etc.
+
+# Build settings
 markdown: kramdown
+remote_theme: "mmistakes/minimal-mistakes"
