--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,8 @@ title: Trey's Engineering Portfolio
 description: Radar, RF, and signal processing projects
 theme: minima
 markdown: kramdown
+
+collections:
+  projects:
+    output: true
+    permalink: /projects/:name/
